--- a/app/design/frontend/creo/default/template/wishlist/item/column/remove.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/item/column/remove.phtml
@@ -26,6 +26,5 @@
 
 ?>
 <?php ?><a href="<?php echo $this->getItemRemoveUrl($this->getItem()); ?>" onclick="return confirmRemoveWishlistItem();" title="<?php echo $this->__('Remove Item') ?>"
-    class="btn-remove btn-remove2"><?php echo $this->__('Remove item');?></a> <?php ?>
-
-    <p><a class="link-edit button button-secondary" href="<?php echo $this->getItemConfigureUrl($this->getItem()) ?>"><?php echo $this->__('Edit') ?></a></p>
+    class="cancel"><?php echo $this->__('');?><i class="icon-cancel"></i></a> <?php ?>
+    <a class="edit" href="<?php echo $this->getItemConfigureUrl($this->getItem()) ?>"><?php echo $this->__('') ?><i class="icon-edit"></i></a>
