--- a/app/design/frontend/creo/default/template/wishlist/options_list.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/options_list.phtml
@@ -61,7 +61,7 @@ foreach ($productAttributeOptions as $productAttribute) {
 <?php
 foreach( $attributeOptions['Color'] as $ao ){
 	if(strtolower($ao) == strtolower($color) ){
-		$txt [] = '<li class="active '.strtolower($ao).'"><img width="21" height="21" alt="'.$ao.'" src="'.Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA).'/catalog/swatches/1/21x21/media/'.strtolower($ao).'.png" style="border:1px solid black; transform:skew(-15deg)"></li>';
+		$txt [] = '<li class="active '.strtolower($ao).'"><img width="21" height="21" alt="'.$ao.'" src="'.Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA).'/catalog/swatches/1/21x21/media/'.strtolower($ao).'.png" ></li>';
 		}else{
 	$txt [] = '<li class="'.str_replace(" ","_",strtolower($ao)).'"><img width="21" height="21" alt="'.$ao.'" src="'.Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA).'/catalog/swatches/1/21x21/media/'.strtolower($ao).'.png"></li>';
 		}
@@ -77,9 +77,9 @@ echo implode(' ',$txt);
 <?php
 foreach( $attributeOptions['Size'] as $ao ){
 	if(strtolower($ao) == strtolower($size) ){
-		$txt2 [] = '<li class="active"><a href="#" >'.$ao.'</a></li>';
+		$txt2 [] = '<li class="active">'.$ao.'</li>';
 		}else{
-	$txt2 [] = '<li><a href="#" >'.$ao.'</a></li>';
+	$txt2 [] = '<li>'.$ao.'</li>';
 		}
 		
 }
