--- a/app/design/frontend/creo/default/template/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/creo/default/template/customer/account/dashboard/address.phtml
@@ -38,7 +38,7 @@
 													<span class="address"><?php echo $this->getPrimaryShippingAddressHtml() ?></span>
 													<a class="edit" href="<?php echo $this->getPrimaryShippingAddressEditUrl() ?>">Edit Address</a>
 												</div>
-												<a href="<?php echo $this->getAddressBookUrl() ?>" class="edit-icon"><i class="icon-pencil"></i></a>
+												<a href="<?php echo $this->getAddressBookUrl() ?>" class="edit-icon"><i class="icon-pencil"></i> Edit </a>
 											</div>
 										</div>
 
