--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -1185,3 +1185,4 @@
 .customer-account-edit .scaffold-form .fieldset1 em {  color: red;  margin: 0 6px 0 0; }
 .customer-account-edit .scaffold-form label[for=email] em {  color: red;  margin: 0 6px 0 0; }
 .customer-address-form form select#country { bottom: 0; font-size: 14px; padding: 4px 0; margin: 0 0 6px 0;} 
+.upload_photo_btn.fb_photo_btn { display: none;}
