--- a/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
+++ b/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
@@ -98,9 +98,10 @@
                  <?php /*?><a href="<?php echo $this->getForgotPasswordUrl() ?>" class="f-left"><?php echo $this->__('Forgot Your Password?') ?></a><?php */?>
                  
                 <div class="submit-holder btn-holder">
-                <button type="button" class="pull-left" onclick="window.location.href='<?php echo $this->getForgotPasswordUrl() ?>'"><span class="span1"><span class="span2">Forgot your password?</span></span></button>
+                <button type="button" class="pull-left" onclick="window.location.href='<?php echo $this->getForgotPasswordUrl() ?>'"><span class="span1"><span class="span2">Forgot password?</span></span></button>
                     <button type="submit" class="button" title="<?php echo $this->__('Login') ?>" name="send" id="send2"><span><span><?php echo $this->__('Login') ?></span></span></button>
                 </div>
+
         
        
         <?php if (Mage::helper('checkout')->isContextCheckout()): ?>
