shapes plugin fixing

--- a/app/design/frontend/creo/default/template/pdp/action/shapes.phtml
+++ b/app/design/frontend/creo/default/template/pdp/action/shapes.phtml
@@ -71,3 +71,15 @@ $limit = $this->_default_page_size_shape;
 		</div>
     </div>
 </div>
+
+<script type="text/javascript">
+
+function stopRKey(evt) {
+  var evt = (evt) ? evt : ((event) ? event : null);
+  var node = (evt.target) ? evt.target : ((evt.srcElement) ? evt.srcElement : null);
+  if ((evt.keyCode == 13) && (node.type=="text"))  {return false;}
+}
+
+document.onkeypress = stopRKey;
+
+</script> 
