--- a/app/design/frontend/creo/default/template/customer/form/loginpopup.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/loginpopup.phtml
@@ -53,7 +53,9 @@
             <span class="error"><?php echo $this->__('* Required Fields') ?></span>
             <div class="submit-holder"> <a href="<?php echo $this->getForgotPasswordUrl() ?>" ><?php echo $this->__('Forgot Password?') ?></a>
               <button type="submit" class="button popuplogin_button" title="<?php echo $this->__('Login') ?>" name="send" id="send2"><span><span><?php echo $this->__('Login') ?></span></span></button>
-              <?php echo $this->getChildHtml('form.additional.info'); ?> </div>
+              <?php echo $this->getChildHtml('form.additional.info'); ?> 
+             <input type="hidden" name="form_key" value="<?php echo Mage::getSingleton('core/session')->getFormKey(); ?>" />
+              </div>
           </form>
           <div class="row">
           	<div class="col-xs-12 text-center">
