--- a/app/locale/en_US/template/email/html/footer.html
+++ b/app/locale/en_US/template/email/html/footer.html
@@ -1,4 +1,4 @@
-<tr style="width:100%;">
+﻿<tr style="width:100%;">
   <td class="three-column test" style=" border-bottom: 6px solid #e1e1e1;"><!--[if (gte mso 9)|(IE)]>
         <table width="100%">
         <tr>
@@ -13,7 +13,7 @@
       <tr>
         <td><ul class="list1">
             <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none;"><img src="{{skin url="images/icon1.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_phone}}</a></li>
-            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img src="{{skin url="images/icon2.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_email}}</a></li>
+            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img src="{{skin url="images/icon2.png" _area='frontend'}}" style="padding-right: 5px;">talktous@creoroom.com</a></li>
             <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img src="{{skin url="images/icon3.png" _area='frontend'}}" style="padding-right: 5px;">Saturday to Thursday</a></li>
             <li style="margin-bottom: 10px;"><a href="#" style=" font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none;"><img src="{{skin url="images/icon4.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_hours}}</a></li>
           </ul></td>
@@ -47,7 +47,7 @@
     color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;">SOCIALIZE WITH US</h2></td>
       </tr>
       <tr class="table-images">
-        <td><a href="#"><img src="{{skin url="images/fb.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a> <a href="#"><img src="{{skin url="images/tweet.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a> <a href="#"><img src="{{skin url="images/inta.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a> <a href="#"><img src="{{skin url="images/pin.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a></td>
+        <td><a href="https://www.facebook.com/CREOROOM"><img src="{{skin url="images/fb.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a> <a href="https://twitter.com/creo_room/"><img src="{{skin url="images/tweet.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a> <a href="https://instagram.com/creo_room/"><img src="{{skin url="images/inta.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a> <a href="https://www.pinterest.com/creo_room/"><img src="{{skin url="images/pin.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a></td>
       </tr>
     </table>
     
@@ -67,7 +67,7 @@
     <table  style="width: 100%; max-width: 263px; display: inline-block; vertical-align: top; text-align: center;">
       <tr>
         <td><h3 style="text-align: center;text-transform: capitalize;color: #ef4f61;font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 17px;text-decoration: underline;">Customize Your Products</h3>
-          <p style="font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 16px;padding: 0 20px;color: rgb(0, 0, 0);">Get Creative nd customize your own
+          <p style="font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 16px;padding: 0 20px;color: rgb(0, 0, 0);">Get Creative and customize your own
             product within our site. Be your own designer.</p></td>
       </tr>
     </table >
@@ -94,7 +94,7 @@
         <td><h3 style="text-align: center;text-transform: capitalize;color: #ef4f61;font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 17px;text-decoration: underline;">Free Exchange</h3>
           <p style="font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 16px;padding: 0 20px;color: rgb(0, 0, 0);
     }">You didn’t like it? Exchange it
-            within 3 days</p></td>
+            within 3 days.</p></td>
       </tr>
     </table>
     
@@ -141,7 +141,7 @@
     <table style="width: 100%; max-width: 263px; display: inline-block; vertical-align: top; text-align: center;">
       <tr>
         <td><h3 style="text-align: center;text-transform: capitalize;color: #ef4f61;font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 17px;text-decoration: underline;">We deliver Everywhere</h3>
-          <p>We deliver to UAE, and all GCC Countries. We also deliver to Turkey, Egypt, London and Jordan
+          <p>We deliver to UAE, and all GCC Countries. We also deliver to Turkey, Egypt, Lebanon and Jordan
            </p></td>
       </tr>
     </table>
@@ -164,10 +164,10 @@
         We accept credit card payments and Cash on Delivery. </p></td>
       </tr>
       <tr>
-        <td><p style="font-family: 'Roboto Condensed', sans-serif; font-size: 12px; padding: 0 20px; color: rgb(0, 0, 0); text-align: center; margin-bottom: 25px;">We are hear to help you, drop us a live at <a href="#">{{var store_email}}</a> or give us a call {{var store_phone}}(international) <br/>
-            Imprint: Creative Room Gift Items LLC P.O. Box: 34134 - Bur Dubai
+        <td><p style="font-family: 'Roboto Condensed', sans-serif; font-size: 12px; padding: 0 20px; color: rgb(0, 0, 0); text-align: center; margin-bottom: 25px;">We are hear to help you, drop us a live at <a href="mailto:talktous@creoroom.com">talktous@creoroom.com</a> or give us a call {{var store_phone}}(international) <br/>
+            Imprint: Creative Room Gift Items LLC P.O. Box: 34135 - Bur Dubai
             We hope you find this message useful. <br/> 
-            You're receiving this e-mail because you signed up for CREO newsletter </p></td>
+            You're receiving this e-mail because you signed up for CREO newsletter. </p></td>
       </tr>
     </table></td>
 </tr>
