Subscription popup resolved.

--- a/app/design/frontend/creo/default/template/newsletter/subscribe.phtml
+++ b/app/design/frontend/creo/default/template/newsletter/subscribe.phtml
@@ -40,7 +40,7 @@ $subscriber = Mage::getModel('newsletter/subscriber')->loadByEmail($customerEmai
 <?php 
 $check_cookie = Mage::getModel('core/cookie')->get('popup-shown');
 $visitAttempt = $_SERVER['HTTP_REFERER'];
-if((Mage::getModel('core/cookie')->get('popup-shown')) && ($visitCount=='0') && ($subscriber->subscriber_email=='')) { ?>
+//if((Mage::getModel('core/cookie')->get('popup-shown')) && ($visitCount=='0') && ($subscriber->subscriber_email=='')) { ?>
 
 <div class="modal fade bs-example-modal-md modal_newsletter " tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-md">
@@ -74,7 +74,7 @@ if((Mage::getModel('core/cookie')->get('popup-shown')) && ($visitCount=='0') && 
   </div>
 </div>
 
-<?php } ?>
+<?php //} ?>
 
 
 
