--- a/app/design/frontend/creo/default/template/page/html/header.phtml
+++ b/app/design/frontend/creo/default/template/page/html/header.phtml
@@ -89,15 +89,15 @@ if(Mage::registry('current_product')) {
             </div>-->
         </div>
 
-
+<?php echo $this->getChildHtml('topLinks') ?>
 
         <div class="bottom-area">
             <!--<a class="headerLogin" data-target=".bs-example-modal-md" data-toggle="modal" href="#">sub</a>-->
             <?php echo $this->getChildHtml('currency_switcher') ?>
             <?php $islogedin = Mage::getSingleton('customer/session')->isLoggedIn() ?>
             <?php if (!$islogedin): ?>
-                <!--<a class="headerLogin" data-target=".bs-example-modal-sm" data-toggle="modal" href="#">LOGIN</a>-->
-                <a class="headerLogin" href="<?php echo Mage::getBaseUrl(); ?>/customer/account/login/">LOGIN</a>
+               <!-- <a class="headerLogin" data-target=".bs-example-modal-sm" data-toggle="modal" href="#">LOGIN</a>-->
+                <a class="" href="<?php echo Mage::getBaseUrl(); ?>customer/account/login/">LOGIN</a>
             <?php else: ?>
                 <div class="open-close login-area">
                     <!--<a href="#" class="opener"  data-target=".bs-example-modal-md" data-toggle="modal"> NL </a>-->
