Adding modified viewport for mobile devices only.

--- a/app/design/frontend/creo/default/layout/page.xml
+++ b/app/design/frontend/creo/default/layout/page.xml
@@ -84,9 +84,9 @@
                 <action method="addItem"><type>skin_css</type><name>css/madisonisland.css</name><params/><if><![CDATA[<!--[if (gte IE 9) | (IEMobile)]><!-->]]></if></action>
 
                 <!-- Sets viewport meta tag using text block -->
-                <block type="core/text" name="head.viewport">
-                    <action method="setText"><text><![CDATA[<meta name="viewport" content="initial-scale=1.0, width=device-width" />]]>&#10;</text></action>
-                </block>
+                <!--<block type="core/text" name="head.viewport">
+                    <action method="setText"><text><![CDATA[<meta name="viewport" content="width=1140" />]]>&#10;</text></action>
+                </block>-->
             </block>
 
             <block type="core/text_list" name="after_body_start" as="after_body_start" translate="label">
