--- a/app/design/frontend/creo/default/template/page/html/header.phtml
+++ b/app/design/frontend/creo/default/template/page/html/header.phtml
@@ -97,7 +97,7 @@ if(Mage::registry('current_product')) {
             <?php $islogedin = Mage::getSingleton('customer/session')->isLoggedIn() ?>
             <?php if (!$islogedin): ?>
                <!-- <a class="headerLogin" data-target=".bs-example-modal-sm" data-toggle="modal" href="#">LOGIN</a> -->
-               <a class="" href="<?php echo Mage::getBaseUrl(); ?>customer/account/login/">LOGIN</a>
+               <a class="headerLogin" href="<?php echo Mage::getBaseUrl(); ?>customer/account/login/">LOGIN</a>
             <?php else: ?>
                 <div class="open-close login-area">
                     <!--<a href="#" class="opener"  data-target=".bs-example-modal-md" data-toggle="modal"> NL </a>-->
