login popup updates

--- a/app/design/frontend/creo/default/template/digitalpianism/ajaxlogin/index.phtml
+++ b/app/design/frontend/creo/default/template/digitalpianism/ajaxlogin/index.phtml
@@ -157,7 +157,7 @@
 
         <script type="text/javascript">
             //<![CDATA[
-            document.observe("dom:loaded", function() {
+/*            document.observe("dom:loaded", function() {
                 persistentWindow = new AjaxLogin({
                     triggers: {},
                     size: {
@@ -168,7 +168,7 @@
                     .setModal(1)
                     .show();
             });
-            //]]>
+*/            //]]>
         </script>
 
     <?php endif; ?>
