Filter applied at categories page

--- a/app/design/frontend/creo/default/template/layerednav/filter_attribute.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/filter_attribute.phtml
@@ -1,5 +1,6 @@
 <?php $style_array = array('largevshape','round','vshape')?>
-<?php $gender_array = array('men','children','women');?>
+<?php $gender_array = array('men','women');?>
+<?php // $gender_array = array('men','children','women');?>
 <?php 
 $items        = $this->getFiltersArray();
 $displayStyle = $this->getColumnsNum(); 
