--- a/app/locale/en_US/template/email/html/footer.html
+++ b/app/locale/en_US/template/email/html/footer.html
@@ -11,7 +11,7 @@
     color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;"> talk to us</h2></td>
       </tr>
       <tr>
-        <td><ul class="list1">
+        <td><ul class="list1" style="list-style:none;">
             <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none;"><img src="{{skin url="images/icon1.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_phone}}</a></li>
             <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img src="{{skin url="images/icon2.png" _area='frontend'}}" style="padding-right: 5px;">talktous@creoroom.com</a></li>
             <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img src="{{skin url="images/icon3.png" _area='frontend'}}" style="padding-right: 5px;">Saturday to Thursday</a></li>
@@ -30,7 +30,7 @@
     color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;">FIND US ON MOBILE</h2></td>
       </tr>
       <tr>
-        <td><ul class="list2" style="    margin-top: 10px;">
+        <td><ul class="list2" style=" list-style:none;margin-top: 10px;">
             <li><a href="#"><img src="{{skin url="images/app.png" _area='frontend'}}" style=" margin-bottom: 10px;"></a></li>
             <li><a href="#"><img src="{{skin url="images/googleapp.png" _area='frontend'}}" style=" margin-bottom: 10px; "></a></li>
           </ul></td>
