--- a/app/design/frontend/creo/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list/toolbar.phtml
@@ -108,7 +108,7 @@
     </div>
 
 <?php endif ?>
-<?php /* ?>
+<?php  ?>
   <?php if($this->getCollection()->getSize()): ?>
   <div class="toolbar">
   <?php if( $this->isExpanded() ): ?>
@@ -129,22 +129,22 @@
   </p>
   <?php endif; ?>
 
-  <div class="sort-by">
-  <label><?php echo $this->__('Sort By') ?></label>
-  <select onchange="setLocation(this.value)" title="<?php echo $this->__('Sort By') ?>">
-  <?php foreach($this->getAvailableOrders() as $_key=>$_order): ?>
-  <option value="<?php echo $this->getOrderUrl($_key, 'asc') ?>"<?php if($this->isOrderCurrent($_key)): ?> selected="selected"<?php endif; ?>>
-  <?php echo $this->__($_order) ?>
+<!--  <div class="sort-by">
+  <label><?php //echo $this->__('Sort By') ?></label>
+  <select onchange="setLocation(this.value)" title="<?php //echo $this->__('Sort By') ?>">
+  <?php //foreach($this->getAvailableOrders() as $_key=>$_order): ?>
+  <option value="<?php //echo $this->getOrderUrl($_key, 'asc') ?>"<?php //if($this->isOrderCurrent($_key)): ?> selected="selected"<?php //endif; ?>>
+  <?php //echo $this->__($_order) ?>
   </option>
-  <?php endforeach; ?>
+  <?php //endforeach; ?>
   </select>
-  <?php if($this->getCurrentDirection() == 'desc'): ?>
-  <a href="<?php echo $this->getOrderUrl(null, 'asc') ?>" class="sort-by-switcher sort-by-switcher--desc" title="<?php echo $this->__('Set Ascending Direction') ?>"><?php echo $this->__('Set Ascending Direction') ?></a>
-  <?php else: ?>
-  <a href="<?php echo $this->getOrderUrl(null, 'desc') ?>" class="sort-by-switcher sort-by-switcher--asc" title="<?php echo $this->__('Set Descending Direction') ?>"><?php echo $this->__('Set Descending Direction') ?></a>
-  <?php endif; ?>
+  <?php //if($this->getCurrentDirection() == 'desc'): ?>
+  <a href="<?php //echo $this->getOrderUrl(null, 'asc') ?>" class="sort-by-switcher sort-by-switcher--desc" title="<?php //echo $this->__('Set Ascending Direction') ?>"><?php //echo $this->__('Set Ascending Direction') ?></a>
+  <?php //else: ?>
+  <a href="<?php //echo $this->getOrderUrl(null, 'desc') ?>" class="sort-by-switcher sort-by-switcher--asc" title="<?php //echo $this->__('Set Descending Direction') ?>"><?php //echo $this->__('Set Descending Direction') ?></a>
+  <?php //endif; ?>
   </div>
-  </div>
+-->  </div>
   <?php endif; ?>
   <div class="pager">
   <div class="count-container">
@@ -175,7 +175,7 @@
   </div>
   </div>
   <?php endif ?>
-  <?php */ ?>
+  <?php  ?>
 <script>
     jQuery('#sortbyopener').click(function () {
         var sort_by_menu = jQuery(".slide.sortbyUl");
