--- a/app/design/frontend/creo/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list/toolbar.phtml
@@ -146,8 +146,8 @@
   </div>
 -->  </div>
   <?php endif; ?>
-  <div class="pager">
-  <div class="count-container">
+  <div class="pager1">
+  <!-- <div class="count-container">
   <?php if($this->getLastPageNum()>1): ?>
   <p class="amount amount--has-pages">
   <?php echo $this->__('%s-%s of %s', $this->getFirstNum(), $this->getLastNum(), $this->getTotalNum()) ?>
@@ -168,7 +168,7 @@
   <?php endforeach; ?>
   </select>
   </div>
-  </div>
+  </div> -->
 
   <?php echo $this->getPagerHtml() ?>
 
