--- a/app/design/frontend/creo/default/template/page/html/pager.phtml
+++ b/app/design/frontend/creo/default/template/page/html/pager.phtml
@@ -68,33 +68,33 @@
 
     <?php if($this->getLastPageNum()>1): ?>
     <div class="pages">
-        <strong><?php echo $this->__('Page:') ?></strong>
-        <ol>
+        <!-- <strong><?php // echo $this->__('Page:') ?></strong> -->
+        <ul class="pagination pagination-sm">
         <?php if (!$this->isFirstPage()): ?>
             <li>
-                <a class="previous<?php if(!$this->getAnchorTextForPrevious()): ?> i-previous<?php endif;?>" href="<?php echo $this->getPreviousPageUrl() ?>" title="<?php echo $this->__('Previous') ?>">
+                <a  aria-label="Previous" class="previous<?php if(!$this->getAnchorTextForPrevious()): ?> i-previous<?php endif;?>" href="<?php echo $this->getPreviousPageUrl() ?>" title="<?php echo $this->__('Previous') ?>">
                     <?php if(!$this->getAnchorTextForPrevious()): ?>
-                        <?php echo $this->__('Previous') ?>
+                        <?php echo $this->__('') ?>
                     <?php else: ?>
                         <?php echo $this->getAnchorTextForPrevious() ?>
-                    <?php endif;?>
+                    <?php endif;?><strong><i class="icon-angle-left"></i></strong>
                 </a>
             </li>
         <?php endif;?>
 
         <?php if ($this->canShowFirst()): ?>
-            <li><a class="first" href="<?php echo $this->getFirstPageUrl() ?>">1</a></li>
+            <li><a class="first" href="<?php echo $this->getFirstPageUrl() ?>"><span>1</span></a></li>
         <?php endif;?>
 
         <?php if ($this->canShowPreviousJump()): ?>
-            <li><a class="previous_jump" title="" href="<?php echo $this->getPreviousJumpUrl() ?>">...</a></li>
+            <li><a class="previous_jump" title="" href="<?php echo $this->getPreviousJumpUrl() ?>"><strong><i class="icon-angle-left"></i></strong></a></li>
         <?php endif;?>
 
         <?php foreach ($this->getFramePages() as $_page): ?>
             <?php if ($this->isPageCurrent($_page)): ?>
-                <li class="current"><?php echo $_page ?></li>
+                <li class="current active"><a href="<?php echo $this->getPageUrl($_page) ?>"><span><?php echo $_page ?></span></a></li>
             <?php else: ?>
-                <li><a href="<?php echo $this->getPageUrl($_page) ?>"><?php echo $_page ?></a></li>
+                <li><a href="<?php echo $this->getPageUrl($_page) ?>"><span><?php echo $_page ?></span></a></li>
             <?php endif;?>
         <?php endforeach;?>
 
@@ -109,16 +109,16 @@
 
         <?php if (!$this->isLastPage()): ?>
             <li>
-                <a class="next<?php if(!$this->getAnchorTextForNext()): ?> i-next<?php endif; ?>" href="<?php echo $this->getNextPageUrl() ?>" title="<?php echo $this->__('Next') ?>">
+                <a aria-label="Next" class="next<?php if(!$this->getAnchorTextForNext()): ?> i-next<?php endif; ?>" href="<?php echo $this->getNextPageUrl() ?>" title="<?php echo $this->__('Next') ?>">
                     <?php if(!$this->getAnchorTextForNext()): ?>
-                        <?php echo $this->__('Next') ?>
+                        <?php echo $this->__('') ?>
                     <?php else: ?>
                         <?php echo $this->getAnchorTextForNext() ?>
-                    <?php endif;?>
+                    <?php endif;?><strong><i class="icon-angle-right"></i></strong>
                 </a>
             </li>
         <?php endif;?>
-        </ol>
+        </ul>
 
     </div>
     <?php endif; ?>
