--- a/app/locale/en_US/template/email/html/footer.html
+++ b/app/locale/en_US/template/email/html/footer.html
@@ -1,4 +1,4 @@
-﻿<tr style="width:100%;">
+<tr style="width:100%;">
   <td class="three-column test" style=" border-bottom: 6px solid #e1e1e1;"><!--[if (gte mso 9)|(IE)]>
         <table width="100%">
         <tr>
@@ -12,10 +12,13 @@
       </tr>
       <tr>
         <td><ul class="list1" style="list-style:none;">
-            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none;"><img src="{{skin url="images/icon1.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_phone}}</a></li>
-            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img src="{{skin url="images/icon2.png" _area='frontend'}}" style="padding-right: 5px;">talktous@creoroom.com</a></li>
-            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img src="{{skin url="images/icon3.png" _area='frontend'}}" style="padding-right: 5px;">Saturday to Thursday</a></li>
-            <li style="margin-bottom: 10px;"><a href="#" style=" font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none;"><img src="{{skin url="images/icon4.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_hours}}</a></li>
+            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none;"><img style="display:block;" src="{{skin url="images/icon1.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_phone}}</a></li>
+            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><imgstyle="display:block;" src="{{skin url="images/icon2.png" _area='frontend'}}" style="padding-right: 5px;">talktous@creoroom.com</a></li>
+            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img style="display:block;" src="{{skin url="images/icon2.png" _area='frontend'}}" style="padding-right: 5px;">talktous@creoroom.com</a></li>
+            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img style="display:block;" src="{{skin url="images/icon2.png" _area='frontend'}}" style="padding-right: 5px;">talktous@creoroom.com</a></li>
+            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img style="display:block;" src="{{skin url="images/icon2.png" _area='frontend'}}" style="padding-right: 5px;">talktous@creoroom.com</a></li>
+            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img style="display:block;" src="{{skin url="images/icon3.png" _area='frontend'}}" style="padding-right: 5px;">Saturday to Thursday</a></li>
+            <li style="margin-bottom: 10px;"><a href="#" style=" font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none;"><img style="display:block;" src="{{skin url="images/icon4.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_hours}}</a></li>
           </ul></td>
       </tr>
     </table >
@@ -31,8 +34,8 @@
       </tr>
       <tr>
         <td><ul class="list2" style=" list-style:none;margin-top: 10px;">
-            <li><a href="#"><img src="{{skin url="images/app.png" _area='frontend'}}" style=" margin-bottom: 10px;"></a></li>
-            <li><a href="#"><img src="{{skin url="images/googleapp.png" _area='frontend'}}" style=" margin-bottom: 10px; "></a></li>
+            <li><a href="#"><img src="{{skin url="images/app.png" _area='frontend'}}" style=" margin-bottom: 10px;display:block;"></a></li>
+            <li><a href="#"><img src="{{skin url="images/googleapp.png" _area='frontend'}}" style=" margin-bottom: 10px;display:block; "></a></li>
           </ul></td>
       </tr>
     </table>
