--- a/app/locale/en_US/template/email/html/footer.html
+++ b/app/locale/en_US/template/email/html/footer.html
@@ -8,7 +8,7 @@
     <table  style=" width: 33%; display: inline-block; vertical-align: top; text-align: center;">
       <tr>
         <td><h2 class="h" style="border: 2px solid rgb(225, 225, 225); text-align: center; text-transform: uppercase;
-    color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;"> talk to us</h2></td>
+    color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;display:block;"> talk to us</h2></td>
       </tr>
       <tr>
         <td><ul class="list1" style="list-style:none;">
@@ -30,12 +30,12 @@
     <table style="width: 33%; display: inline-block; vertical-align: top; text-align: center;">
       <tr>
         <td><h2  style="border: 2px solid rgb(225, 225, 225); text-align: center; text-transform: uppercase;
-    color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;">FIND US ON MOBILE</h2></td>
+    color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;display:block;">FIND US ON MOBILE</h2></td>
       </tr>
       <tr>
         <td><ul class="list2" style=" list-style:none;margin-top: 10px;">
-            <li><a href="#"><img src="{{skin url="images/app.png" _area='frontend'}}" style=" margin-bottom: 10px;display:block;"></a></li>
-            <li><a href="#"><img src="{{skin url="images/googleapp.png" _area='frontend'}}" style=" margin-bottom: 10px;display:block; "></a></li>
+            <li><a href="#"><img src="{{skin url="images/app.png" _area='frontend'}}" style="margin-bottom: 10px;display:block;"></a></li>
+            <li><a href="#"><img src="{{skin url="images/googleapp.png" _area='frontend'}}" style="margin-bottom: 10px;display:block; "></a></li>
           </ul></td>
       </tr>
     </table>
@@ -47,7 +47,7 @@
     <table  style="width: 33%; display: inline-block; vertical-align: top; text-align: center;">
       <tr>
         <td><h2  style="border: 2px solid rgb(225, 225, 225); text-align: center; text-transform: uppercase;
-    color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;">SOCIALIZE WITH US</h2></td>
+    color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;display:block;">SOCIALIZE WITH US</h2></td>
       </tr>
       <tr class="table-images">
         <td><a href="https://www.facebook.com/CREOROOM"><img src="{{skin url="images/fb.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a> <a href="https://twitter.com/creo_room/"><img src="{{skin url="images/tweet.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a> <a href="https://instagram.com/creo_room/"><img src="{{skin url="images/inta.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a> <a href="https://www.pinterest.com/creo_room/"><img src="{{skin url="images/pin.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a></td>
