--- a/app/locale/en_US/template/email/html/footer.html
+++ b/app/locale/en_US/template/email/html/footer.html
@@ -5,7 +5,7 @@
         <td width="263px" valign="top">
         <![endif]-->
     
-    <table  style=" width: 33%; display: inline-block; vertical-align: top; text-align: center;">
+    <table class="btn-newsletter" style=" width: 33%; display: inline-block; vertical-align: top; text-align: center;">
       <tr>
         <td><h2 class="h" style="border: 2px solid rgb(225, 225, 225); text-align: center; text-transform: uppercase;
     color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;display:block;"> talk to us</h2></td>
@@ -27,7 +27,7 @@
         </td><td width="263px" valign="top">
         <![endif]-->
     
-    <table style="width: 33%; display: inline-block; vertical-align: top; text-align: center;">
+    <table class="btn-newsletter" style="width: 33%; display: inline-block; vertical-align: top; text-align: center;">
       <tr>
         <td><h2  style="border: 2px solid rgb(225, 225, 225); text-align: center; text-transform: uppercase;
     color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;display:block;">FIND US ON MOBILE</h2></td>
@@ -44,7 +44,7 @@
         </td><td width="263px" valign="top">
         <![endif]-->
     
-    <table  style="width: 33%; display: inline-block; vertical-align: top; text-align: center;">
+    <table class="btn-newsletter" style="width: 33%; display: inline-block; vertical-align: top; text-align: center;">
       <tr>
         <td><h2  style="border: 2px solid rgb(225, 225, 225); text-align: center; text-transform: uppercase;
     color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;display:block;">SOCIALIZE WITH US</h2></td>
