Adding reuired attribute to input fields.

--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5208,3 +5208,7 @@ textarea {
 .pdc_text_list {
 	max-height:900px !important;
 }
+
+.input-text.required-entry.validate-email.email {
+	box-shadow:none;
+}
